--- a/src/commands/packages.yaml
+++ b/src/commands/packages.yaml
@@ -27,7 +27,7 @@ steps:
             name: install cosign version << parameters.cosign-version >>
             command: |
               sudo bash -c "curl -L https://github.com/sigstore/cosign/releases/download/v<< parameters.cosign-version >>/cosign-linux-amd64 --output cosign"
-              chmod +x cosign && sudo mv cosign /usr/local/bin/cosign
+              sudo chmod +x cosign && sudo mv cosign /usr/local/bin/cosign
               cosign version
   - when:
       name: install syft
