--- a/.circleci/integration-test.yml
+++ b/.circleci/integration-test.yml
@@ -26,7 +26,9 @@ jobs:
           out-file: cosign.pub
       - run:
           name: build an OCI image text fixture
-          command: docker build -t twdps/orb-image-provenance:dev.${CIRCLE_SHA1:0:7} -f test/Dockerfile .
+          command: |
+            docker build -t docker.io/twdps/orb-image-provenance:dev.${CIRCLE_SHA1:0:7} -f test/Dockerfile .
+            docker push docker.io/twdps/orb-image-provenance:dev.${CIRCLE_SHA1:0:7}
       - image/sign:
           registry: docker.io/twdps
           image: orb-image-provenance
