--- a/src/commands/sign.yaml
+++ b/src/commands/sign.yaml
@@ -96,28 +96,24 @@ steps:
   - run:
       name: get image manifest id
       command: docker image inspect --format='{{index .RepoDigests 0}}' << parameters.registry >>/<< parameters.image >>:<< parameters.tag >> > manifestid
-  - when:
-      condition: << parameters.sbom >>
-      steps:
-        - run:
-            name: generate sbom using syft
-            command: syft packages --output cyclonedx-json $(cat manifestid) > sbom.json
-        - run:
-            name: Sign oci image, including sbom in the signature annotations, and store signature to registry
-            command: |
-              cosign sign --key cosign.key \
-                          --annotations sbom="$(cat sbom.json)" \
-                          $(cat manifestid) -y
-  - unless:
-      condition: << parameters.sbom >>
-      steps:
-        - run:
-            name: Sign oci image and store signature to registry
-            command: |
-              cosign sign --key << parameters.sign-key >> \
-                  <<#parameters.attestations>> << parameters.attestations >> <</parameters.attestations>> \
-                  $(cat manifestid) -y
+  - run:
+      name: Sign oci image and store signature to registry
+      command: |
+        cosign sign --key << parameters.sign-key >> \
+            <<#parameters.attestations>> << parameters.attestations >> <</parameters.attestations>> \
+            $(cat manifestid) -y
   - run:
       name: verify signature using public key
       command: |
         cosign verify --key << parameters.verify-key >> $(cat manifestid)
+  - when:
+      condition: << parameters.sbom >>
+      steps:
+        - run:
+            name: generate sbom
+            command: syft packages --verbose --output << parameters.sbom-format >> $(cat manifestid) > << parameters.sbom-filename >>
+        - run:
+            name: push sbom to container registry
+            command: |
+              echo ${<< parameters.registry-password >>} | oras login << parameters.registry >> -u ${<< parameters.registry-login >>} --password-stdin
+              oras push --artifact-type 'application/vnd.unknown.config.v1+json' << parameters.registry >>/$(cat manifestid | sed 's/<< parameters.registry >>\///g' | sed 's/:/-/g' | sed 's/@/:/g').spdx << parameters.sbom-filename >>:application/json
