[nc] test image sign with sbom option
Signed-off-by: Nic Cheneweth <nchenewe@thoughtworks.com>

--- a/src/commands/sign.yaml
+++ b/src/commands/sign.yaml
@@ -40,6 +40,11 @@ parameters:
     type: boolean
     default: false
 
+  sbom-filename:
+    description: name of generate sbom file
+    type: string
+    default: sbom.spdx
+
   sbom-format:
     description: sbom format
     type: enum
