[nc] remove install requirement in packages
Signed-off-by: Nic Cheneweth <nchenewe@thoughtworks.com>

--- a/src/commands/packages.yaml
+++ b/src/commands/packages.yaml
@@ -9,14 +9,17 @@ parameters:
   cosign-version:
     description: version to install
     type: string
+    default: ""
 
   syft-version:
     description: version to install
     type: string
+    default: ""
 
   oras-version:
     description: version to install
     type: string
+    default: ""
 
 steps:
   - when:
